MDEV-36758: always release ctx in mhnsw_delete_all

Fixes leak of shared context.